# portfolio_manager

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  README.md  app.py  pyproject.toml  pyrightconfig.json
.github/workflows/: python-app.yml
data/asset_classes/: correlation.csv  returns.csv
data/mappings/: asset_classes.json  fund_compositions.json  fund_information.json  symbols.json
data/options/401K/Google/: options.csv
data/options/401K/Jump/: options.csv
data/samples/: sample_401k.csv  sample_ira.csv
data/summaries/401K/: 2026-03-28_Arturo.csv
data/summaries/Arturo_ROTH_IRA/: 2026-03-29_Arturo.csv
data/summaries/Google_401K/: 2026-03-29_Arturo.csv
data/summaries/IRA/: 2026-03-29_Arturo.csv
data/summaries/Jump_401K/: 2026-03-28_Arturo.csv
src/: app.py  data_utils.py
src/pages/: allocation_sandbox.py  data_management.py  fund_details.py  holdings.py  mappings.py  portfolio_metrics.py  project_growth.py
tests/: test_data_utils.py  test_page_modules.py
