[project]
name = "portfolio-manager"
version = "0.1.0"
description = "A Streamlit app for CSV management using Polars"
dependencies = [
    "streamlit",
    "polars",
    "pandas",
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
]
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
test = "pytest --cov=src --cov-report=term-missing tests/"

[tool.uv]
managed = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
    "pandas-stubs",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/**/*.py" = ["T10", "T20"]  # Ignore type-related issues in src

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
